# wtflow

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
backend/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ArtifactDisplay.tsx  ArtifactDrawer.tsx  ArtifactList.tsx  LogViewer.tsx  NodeTree.tsx
frontend/src/pages/: NodeDetails.tsx  WorkflowDetails.tsx  Workflows.tsx
frontend/src/utils/: streamingApi.ts
src/wtflow/: __init__.py  artifact.py  cli.py  config.py  db.py  decorator.py  definitions.py  discover.py  engine.py  executables.py  executors.py  nodes.py  parser.py  utils.py  workflow.py
src/wtflow/cli/: main.py  wtfunc.py
src/wtflow/db/: __init__.py  client.py  models.py  service.py
src/wtflow/db/orm/: models.py  service.py
src/wtflow/db/sqlite/: __init__.py  service.py
src/wtflow/infra/: artifact.py  engine.py  executables.py  executors.py  info.py  nodes.py  workflow.py
src/wtflow/services/: base_service.py  servicer.py
src/wtflow/services/db/: __init__.py  db_service.py  service.py
src/wtflow/services/db/sqlite/: __init__.py  schema.sql  service.py  sqlite_db_service.py
src/wtflow/services/storage/: service.py  storage_service.py
src/wtflow/services/storage/local/: local_storage_service.py  service.py
src/wtflow/storage/: service.py
src/wtflow/storage/local/: service.py
tests/: cli_test.py  config_test.py  conftest.py  decorator_test.py  discover_test.py  engine_test.py  executables_test.py  executor_test.py  executors_test.py  nodes_test.py  parser_test.py  sqlite_db_service_test.py  workflow_test.py
