[project]
name = "wtflow"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Ido Frenkel", email = "ido123net@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.2",
    "typer>=0.20.0",
    "typing-extensions>=4.13.1; python_version < '3.11'",
]
version = "0.1.0"

[project.scripts]
wtflow = "wtflow.cli.main:main"
wtfunc = "wtflow.cli.wtfunc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[dependency-groups]
dev = [
    "covdefaults>=2.3.0",
    "mypy>=1.15.0",
    "pre-commit>=4.3.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["src", "tests"]
concurrency = ["multiprocessing", "thread"]
patch = ["subprocess"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
